Trying to resolve problem with invitation emails; tweaked login CSS to make fogotten password link more visible
Conflicts:

	server/src/main/java/org/sigmah/server/mail/MailSenderImpl.java

--- a/war/static/login.css
+++ b/war/static/login.css
@@ -50,7 +50,6 @@ div#login input#emailField:focus, div#login input#passwordField:focus {
 
 span#loginBox {
     font-size: 12px;
-    position: relative;
     top: -38px;
     margin: 0 2px 0 0;
     float: right;
@@ -126,10 +125,10 @@ a:hover {
 
 #loginHelp {
     padding-bottom: 0 !important;
-    padding-left: 50px !important;
-    
     padding-top: 2px !important;
-    width: 140px !important;
+    margin: 0 0 0 0 !important;
+    font-size: 10pt;
+    text-align: center;
 }
 
 .instructions {
